--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="absolute inset-0 blurred-bg" style="background-image: url('https://images.unsplash.com/photo-1637666062717-1c6bcfa4a4df?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"></div>
     <div class="absolute inset-0 bg-black bg-opacity-70 z-0"></div>
     <div class="relative z-10 px-6 max-w-4xl fade-in">
-      <h1 class="text-5xl md:text-6xl font-extrabold mb-6 leading-tight text-left">
+      <h1 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight text-left">
         <span class="text-white">THE ONLY</span><br>
         <span class="text-yellow-400">IMPOSSIBLE</span> <span class="text-white">JOURNEY IS</span><br>
         <span class="text-white">THE ONE YOU</span> <span class="text-yellow-400">NEVER BEGIN.</span>
@@ -88,11 +88,44 @@
         </div>
 
       </div>
-      <!-- Instagram Button inside Plans Section -->
+
+      <!-- Instagram Button -->
       <div class="mt-12 flex justify-center">
         <a href="https://www.instagram.com/the_fitman3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
           <img src="https://preview.redd.it/instagram-logo-v0-giqa7qk5zzue1.png?auto=webp&s=c1149ffd4af23e817b520058b3d2d41e04b2a977" alt="Instagram" class="w-12 h-12 hover:opacity-80 transition duration-300">
         </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Creator Section with Background -->
+  <section class="relative text-white py-16 px-4 sm:px-6 overflow-hidden">
+    <!-- Background -->
+    <div class="absolute inset-0">
+      <img src="https://images.unsplash.com/photo-1597075941308-6215ddcf6c39?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+           alt="Background" class="w-full h-full object-cover opacity-60" />
+      <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+    </div>
+
+    <!-- Content -->
+    <div class="relative z-10 max-w-6xl mx-auto">
+      <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 slide-up">Meet the Creator</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
+
+        <!-- Creator Image -->
+        <div class="flex justify-center">
+          <img src="https://i.imgur.com/HbpOXqB.png" alt="Creator Image"
+               class="rounded-2xl shadow-lg max-w-full h-auto w-80 sm:w-80 object-cover border border-white border-opacity-10" />
+        </div>
+
+        <!-- Creator Video -->
+        <div class="flex justify-center">
+          <video controls class="rounded-2xl shadow-lg max-w-full w-80 sm:w-80 h-auto border border-white border-opacity-10">
+            <source src="https://i.imgur.com/i9cudyf.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+
       </div>
     </div>
   </section>
