--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Plan 2 -->
         <div class="bg-gray-900 rounded-3xl p-8 shadow-xl border border-gray-800 transition transform hover:scale-105 duration-300 slide-up">
           <h3 class="text-2xl font-semibold mb-3">Video Coaching + Diet</h3>
-          <p class="text-gray-400 mb-4">Live video training with Me + custom diet support.</p>
+          <p class="text-gray-400 mb-4">Live video training with Me + Custom diet support.</p>
           <p class="text-pink-400 text-xl font-bold mb-6">₹5,000 / Month</p>
           <a href="https://wa.me/918555882302" class="bg-pink-500 hover:bg-pink-400 text-white px-5 py-3 rounded-xl font-medium transition">Start Now</a>
         </div>
