--- a/index.html
+++ b/index.html
@@ -89,10 +89,15 @@
 
       </div>
 
-      <!-- Instagram Button -->
-      <div class="mt-12 flex justify-center">
+      <!-- Instagram & Facebook Buttons -->
+      <div class="mt-12 flex justify-center space-x-6">
+        <!-- Instagram -->
         <a href="https://www.instagram.com/the_fitman3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
           <img src="https://preview.redd.it/instagram-logo-v0-giqa7qk5zzue1.png?auto=webp&s=c1149ffd4af23e817b520058b3d2d41e04b2a977" alt="Instagram" class="w-12 h-12 hover:opacity-80 transition duration-300">
+        </a>
+        <!-- Facebook -->
+        <a href="https://www.facebook.com/donnyhosten/" target="_blank">
+          <img src="https://i.redd.it/1ltbpvqhc2ve1.png" alt="Facebook" class="w-12 h-12 hover:opacity-80 transition duration-300">
         </a>
       </div>
     </div>
